fixing rf1 property names

--- a/public/server/config/ui_config_rf1.json
+++ b/public/server/config/ui_config_rf1.json
@@ -138,9 +138,9 @@
     ],
     "FILTERS": [
       "res_redux1",
-      "yaw_rap1",
-      "roll_rap1",
-      "pitch_rap1",
+      "yaw_gyro_q1",
+      "roll_gyro_q1",
+      "pitch_gyro_q1",
       "yaw_lpf1",
       "roll_lpf1",
       "pitch_lpf1",
@@ -150,9 +150,7 @@
       "pitch_ga1",
       "filter_type1",
       "kd_filter_type1",
-      "yaw_quick1",
-      "roll_quick1",
-      "pitch_quick1",
+      "imuf_w1",
       "x_vector_quick1",
       "x_vector_rap1",
       "y_vector_quick1",
@@ -160,9 +158,9 @@
       "z_vector_quick1",
       "z_vector_rap1",
       "res_redux2",
-      "yaw_rap2",
-      "roll_rap2",
-      "pitch_rap2",
+      "yaw_gyro_q2",
+      "roll_gyro_q2",
+      "pitch_gyro_q2",
       "yaw_lpf2",
       "roll_lpf2",
       "pitch_lpf2",
@@ -172,9 +170,7 @@
       "pitch_ga2",
       "filter_type2",
       "kd_filter_type2",
-      "yaw_quick2",
-      "roll_quick2",
-      "pitch_quick2",
+      "imuf_w2",
       "x_vector_quick2",
       "x_vector_rap2",
       "y_vector_quick2",
@@ -182,9 +178,9 @@
       "z_vector_quick2",
       "z_vector_rap2",
       "res_redux3",
-      "yaw_rap3",
-      "roll_rap3",
-      "pitch_rap3",
+      "yaw_gyro_q3",
+      "roll_gyro_q3",
+      "pitch_gyro_q3",
       "yaw_lpf3",
       "roll_lpf3",
       "pitch_lpf3",
@@ -194,9 +190,7 @@
       "pitch_ga3",
       "filter_type3",
       "kd_filter_type3",
-      "yaw_quick3",
-      "roll_quick3",
-      "pitch_quick3",
+      "imuf_w3",
       "x_vector_quick3",
       "x_vector_rap3",
       "y_vector_quick3",
