--- a/public/server/config/ui_config_rf1.json
+++ b/public/server/config/ui_config_rf1.json
@@ -1302,6 +1302,10 @@
       "label": "ARMED"
     },
     {
+      "value": "MYRTLE",
+      "label": "MYRTLE"
+    },
+    {
       "value": "LEVEL",
       "label": "LEVEL"
     },
