--- a/package.json
+++ b/package.json
@@ -37,26 +37,26 @@
   },
   "dependencies": {
     "@connectedyard/node-intelhex": "^1.2.4",
-    "@material-ui/core": "^3.5.1",
+    "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
-    "@material-ui/lab": "^3.0.0-alpha.23",
-    "electron-context-menu": "^0.10.1",
-    "electron-updater": "^3.2.3",
+    "@material-ui/lab": "^3.0.0-alpha.20",
+    "electron-context-menu": "^0.10.0",
+    "electron-updater": "^3.1.2",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "material-ui": "^0.20.2",
     "material-ui-slider": "^3.0.0",
     "node-hid": "^0.7.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-easy-chart": "^1.0.0",
     "react-grid-layout": "^0.16.6",
-    "react-intl": "^2.7.2",
-    "react-markdown": "^4.0.3",
-    "react-scripts": "^2.1.1",
+    "react-intl": "^2.7.1",
+    "react-markdown": "^3.6.0",
+    "react-scripts": "1.1.5",
     "react-text-mask": "^5.4.3",
     "serialport": "^7.0.2",
-    "three": "^0.98.0",
+    "three": "^0.97.0",
     "three-stl-loader": "^1.0.6",
     "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
     "websocket": "^1.0.28"
@@ -87,16 +87,16 @@
     "preelectron-pack": "yarn build && yarn build-css"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1",
-    "electron": "^3.0.9",
-    "electron-builder": "^20.34.0",
+    "concurrently": "^3.5.0",
+    "electron": "^3.0.5",
+    "electron-builder": "^20.28.4",
     "electron-packager": "^12.2.0",
     "electron-rebuild": "^1.8.2",
-    "husky": "^1.1.4",
-    "lint-staged": "^8.0.4",
-    "node-sass-chokidar": "1.3.4",
-    "prettier": "^1.15.2",
-    "wait-on": "^3.2.0"
+    "husky": "^0.14.3",
+    "lint-staged": "^7.3.0",
+    "node-sass-chokidar": "0.0.3",
+    "prettier": "^1.14.3",
+    "wait-on": "^3.1.0"
   },
   "darwinDependencies": {
     "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
@@ -105,11 +105,5 @@
   "win32Dependencies": {
     "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
     "node-hid": "^0.7.3"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
