--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.20",
+    "ajv": "^6.9.2",
     "electron-context-menu": "^0.10.0",
     "electron-updater": "^3.1.2",
     "express": "^4.16.4",
@@ -87,7 +88,7 @@
   },
   "devDependencies": {
     "concurrently": "3.5.0",
-    "electron": "3.0.5",
+    "electron": "^4.0.8",
     "electron-builder": "20.28.4",
     "electron-packager": "12.2.0",
     "electron-rebuild": "1.8.2",
