--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.20",
+    "ajv": "^6.12.2",
     "electron-context-menu": "^0.10.0",
-    "electron-updater": "^3.1.2",
+    "electron-updater": "^4.3.1",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "material-ui-slider": "^3.0.0",
-    "node-hid": "^0.7.3",
+    "node-hid": "^0.7.9",
+    "node-sass": "^4.14.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-easy-chart": "^1.0.0",
@@ -55,9 +57,7 @@
     "react-scripts": "1.1.5",
     "react-text-mask": "^5.4.3",
     "serialport": "^7.0.2",
-    "three": "^0.97.0",
-    "three-stl-loader": "^1.0.6",
-    "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
+    "usb": "^1.6.1",
     "websocket": "^1.0.28"
   },
   "lint-staged": {
@@ -87,14 +87,17 @@
   },
   "devDependencies": {
     "concurrently": "3.5.0",
-    "electron": "3.0.5",
-    "electron-builder": "20.28.4",
+    "electron": "^4.2.12",
+    "electron-builder": "^22.7.0",
     "electron-packager": "12.2.0",
+    "electron-react-devtools": "^0.5.3",
     "electron-rebuild": "1.8.2",
     "husky": "0.14.3",
     "lint-staged": "7.3.0",
     "node-sass-chokidar": "0.0.3",
     "prettier": "1.14.3",
+    "three": "^0.97.0",
+    "three-stl-loader": "^1.0.6",
     "wait-on": "3.1.0"
   },
   "darwinDependencies": {
