Change IMUF and RATE page

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -83,15 +83,21 @@
       "gps_rescue_min_sats"
     ],
     "PID": [
+      "f_pitch",
       "p_pitch",
       "i_pitch",
       "d_pitch",
+      "f_roll",
       "p_roll",
       "i_roll",
       "d_roll",
+      "f_yaw",
       "p_yaw",
       "i_yaw",
-      "d_yaw"
+      "d_yaw",
+      "feedforward_transition",
+      "vbat_pid_gain",
+      "tpa_type"
     ],
     "RATES": [
       "thr_expo",
@@ -126,7 +132,9 @@
       "imuf_w",
       "imuf_pitch_lpf_cutoff_hz",
       "imuf_roll_lpf_cutoff_hz",
-      "imuf_yaw_lpf_cutoff_hz"
+      "imuf_yaw_lpf_cutoff_hz",
+      "imuf_acc_lpf_cutoff_hz",
+      "imuf_sharpness"
     ],
     "MOTORS": [
       "mixer_type",
