--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.1",
   "author": "EmuFlight",
   "homepage": "https://github.com/emuflight",
-  "description": "Pegagus Multi-Firmware-UI",
+  "description": "Nemesis EmuFlight-UI",
   "main": "public/electron.js",
   "repository": "https://github.com/emuflight/Nemesis",
   "buildDependenciesFromSource": true,
