--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "pegasus",
-  "name": "pegasus",
+  "short_name": "nemesis",
+  "name": "nemesis",
   "icons": [
     {
       "src": "/icon.png",
@@ -15,5 +15,5 @@
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "permissions": ["http://localhost:9001", "https://www.heliorc.com"]
+  "permissions": ["http://localhost:9001", "https://github.com/emuflight"]
 }
