update package author email address

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": {
     "name": "EmuFlight",
-    "email": "test-email@emuflight.org",
+    "email": "emuflightofficial@gmail.com",
     "url": "https://github.com/emuflight/"
   },
   "homepage": "./",
