Add start of new aux mode view. update emesis config with current mode list

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -748,48 +748,48 @@
     },
     {
       "value": 3,
-      "label": "BARO"
+      "label": "MAG"
     },
     {
       "value": 4,
-      "label": "ANTIGRAVITY"
+      "label": "HEADFREE"
     },
     {
       "value": 5,
-      "label": "MAG"
+      "label": "PASSTHRU"
     },
 
     {
       "value": 6,
-      "label": "HEADFREE"
+      "label": "FAILSAFE"
     },
     {
       "value": 7,
-      "label": "HEADADJ"
+      "label": "GPSRESCUE"
     },
     {
       "value": 8,
-      "label": "CAMSTAB"
+      "label": "NFE"
     },
     {
       "value": 10,
-      "label": "GPSHOME"
+      "label": "ANTIGRAVITY"
     },
     {
       "value": 11,
-      "label": "GPSHOLD"
+      "label": "HEADADJ"
     },
     {
       "value": 12,
-      "label": "PASSTHU"
+      "label": "CAMSTAB"
     },
     {
       "value": 13,
-      "label": "BEEPER"
+      "label": "BEEPERON"
     },
     {
       "value": 15,
-      "label": "LEDMAX"
+      "label": "LEDLOW"
     },
     {
       "value": 17,
@@ -821,47 +821,47 @@
     },
     {
       "value": 27,
-      "label": "FAILSAFE"
-    },
-    {
-      "value": 28,
       "label": "AIRMODE"
     },
     {
-      "value": 29,
-      "label": "SWITCH3D"
+      "value": 28,
+      "label": "3D"
     },
     {
-      "value": 30,
+      "value": 29,
       "label": "FPVANGLEMIX"
     },
     {
-      "value": 31,
+      "value": 30,
       "label": "BLACKBOXERASE"
     },
     {
-      "value": 32,
+      "value": 31,
       "label": "CAMERA1"
     },
     {
-      "value": 33,
+      "value": 32,
       "label": "CAMERA2"
     },
     {
-      "value": 34,
+      "value": 33,
       "label": "CAMERA3"
     },
     {
-      "value": 35,
+      "value": 34,
       "label": "FLIPOVERAFTERCRASH"
     },
     {
-      "value": 36,
+      "value": 35,
       "label": "PREARM"
     },
     {
-      "value": 37,
+      "value": 36,
       "label": "BEEPGPSCOUNT"
+    },
+    {
+      "value": 37,
+      "label": "VTXPITMODE"
     },
     {
       "value": 39,
@@ -869,35 +869,47 @@
     },
     {
       "value": 40,
-      "label": "USER1"
-    },
-    {
-      "value": 41,
-      "label": "USER2"
-    },
-    {
-      "value": 42,
-      "label": "USER3"
-    },
-    {
-      "value": 43,
-      "label": "USER4"
-    },
-    {
-      "value": 44,
-      "label": "PIDAUDIO"
-    },
-    {
-      "value": 45,
       "label": "PARALYZE"
     },
     {
+      "value": 41,
+      "label": "USER1"
+    },
+    {
+      "value": 42,
+      "label": "USER2"
+    },
+    {
+      "value": 43,
+      "label": "USER3"
+    },
+    {
+      "value": 44,
+      "label": "USER4"
+    },
+    {
+      "value": 45,
+      "label": "PIDAUDIO"
+    },
+    {
       "value": 46,
-      "label": "GPSRESCUE"
+      "label": "VTXCONTROLDISABLE"
     },
     {
       "value": 47,
-      "label": "ACROTRAINER"
+      "label": "LAUNCHCONTROL"
+    },
+    {
+      "value": 48,
+      "label": "MSPOVERRIDE"
+    },
+    {
+      "value": 49,
+      "label": "STICKCOMMANDDISABLE"
+    },
+    {
+      "value": 50,
+      "label": "BEEPERMUTE"
     }
   ]
 }
