Add anti_gravity_gain to PID tab and set mode of setting in ui_config_bef.json

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -103,7 +103,8 @@
       "emuboost",
       "emuboost_yaw",
       "axis_lock_multiplier",
-      "axis_lock_hz"
+      "axis_lock_hz",
+      "anti_gravity_gain"
     ],
     "RATES": [
       "thr_expo",
