move orientation settings on motors and layout tab

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -179,9 +179,6 @@
       "align_gyro",
       "align_acc",
       "align_mag",
-      "align_board_roll",
-      "align_board_pitch",
-      "align_board_yaw",
       "min_throttle",
       "max_throttle",
       "accxy_deadband",
@@ -197,6 +194,8 @@
       "rc_interp",
       "rc_interp_ch",
       "rc_interp_int",
+      "rc_smoothing_auto_smoothness",
+      "rc_predictor_velocity_hz",
       "serialrx_provider",
       "serialrx_inverted",
       "serialrx_halfduplex",
