--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -741,11 +741,7 @@
       ]
     }
   },
-  "keymap": {
-    "gyro_lpf": "gyro_hardware_lpf",
-    "dterm_lowpass_type": "dterm_lowpass_hz_type",
-    "dterm_lowpass": "dterm_lowpass_hz"
-  },
+  "keymap": {},
   "motor_order": [4, 2, 1, 3],
   "rx_scale": {
     "min": 900,
