Add SPI receiver config to RX tab

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -200,6 +200,9 @@
       "serialrx_provider",
       "serialrx_inverted",
       "serialrx_halfduplex",
+      "rx_spi_protocol",
+      "rx_spi_bus",
+      "rx_spi_led_inversion",
       "failsafe_delay",
       "failsafe_off_delay",
       "failsafe_throttle",
