--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-2016]
         #os: [ubuntu-18.04, macos-10.15, windows-2016]
-    continue-on-error: true
+    continue-on-error: false
 
     steps:
       - name: git checkout
@@ -140,6 +140,7 @@ jobs:
         continue-on-error: false
 
       - name: Upload Artifacts
+        if: always()
         uses: actions/upload-artifact@master
         with:
           name: Nemesis-${{ github.ACTOR }}-${{ github.RUN_NUMBER }}
