--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     timeout-minutes: 40
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: true
+      fail-fast: false
       max-parallel: 3
       matrix:
         os: [ubuntu-latest, macos-latest, windows-2016]
