--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2016]
-        #os: [ubuntu-18.04, macos-10.15, windows-2016]
+        os: [ubuntu-20.04,  macos-10.15, windows-2016]
     continue-on-error: false
 
     steps:
