--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,11 @@ jobs:
     timeout-minutes: 40
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: true
+      fail-fast: false
       max-parallel: 3
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2016]
-        #os: [ubuntu-18.04, macos-10.15, windows-2016]
-    continue-on-error: true
+        os: [ubuntu-20.04, macos-11, windows-2016]
+    continue-on-error: false
 
     steps:
       - name: git checkout
@@ -90,7 +89,7 @@ jobs:
         run: |
           rm -rf ./build/
           rm -rf ./dist/
-          #brew install libusb
+          brew install libusb
           npm install -g npm@6
           npm config set python /usr/bin/python2.7
           npm install -g n
@@ -140,6 +139,7 @@ jobs:
         continue-on-error: false
 
       - name: Upload Artifacts
+        if: always()
         uses: actions/upload-artifact@master
         with:
           name: Nemesis-${{ github.ACTOR }}-${{ github.RUN_NUMBER }}
